src/db/index/column/fts_column/gen/FtsParser.cc

// Generated from FtsParser.g4 by ANTLR 4.8


#include "FtsParser.h"
#include "FtsParserListener.h"


using namespace antlrcpp;
using namespace antlr4;
using namespace antlr4;

FtsParser::FtsParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA,
                                             _sharedContextCache);
}

FtsParser::~FtsParser() {
  delete _interpreter;
}

std::string FtsParser::getGrammarFileName() const {
  return "FtsParser.g4";
}

const std::vector<std::string> &FtsParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary &FtsParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Fts_query_unitContext
//------------------------------------------------------------------

FtsParser::Fts_query_unitContext::Fts_query_unitContext(
    ParserRuleContext *parent_ctx, size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

FtsParser::Fts_or_exprContext *FtsParser::Fts_query_unitContext::fts_or_expr() {
  return getRuleContext<FtsParser::Fts_or_exprContext>(0);
}

tree::TerminalNode *FtsParser::Fts_query_unitContext::EOF() {
  return getToken(FtsParser::EOF, 0);
}


size_t FtsParser::Fts_query_unitContext::getRuleIndex() const {
  return FtsParser::RuleFts_query_unit;
}

void FtsParser::Fts_query_unitContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterFts_query_unit(this);
}

void FtsParser::Fts_query_unitContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitFts_query_unit(this);
}

FtsParser::Fts_query_unitContext *FtsParser::fts_query_unit() {
  Fts_query_unitContext *_localctx =
      _tracker.createInstance<Fts_query_unitContext>(_ctx, getState());
  enterRule(_localctx, 0, FtsParser::RuleFts_query_unit);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(24);
    fts_or_expr();
    setState(25);
    match(FtsParser::EOF);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fts_or_exprContext
//------------------------------------------------------------------

FtsParser::Fts_or_exprContext::Fts_or_exprContext(ParserRuleContext *parent_ctx,
                                                  size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

std::vector<FtsParser::Fts_and_exprContext *>
FtsParser::Fts_or_exprContext::fts_and_expr() {
  return getRuleContexts<FtsParser::Fts_and_exprContext>();
}

FtsParser::Fts_and_exprContext *FtsParser::Fts_or_exprContext::fts_and_expr(
    size_t i) {
  return getRuleContext<FtsParser::Fts_and_exprContext>(i);
}

std::vector<tree::TerminalNode *> FtsParser::Fts_or_exprContext::OR() {
  return getTokens(FtsParser::OR);
}

tree::TerminalNode *FtsParser::Fts_or_exprContext::OR(size_t i) {
  return getToken(FtsParser::OR, i);
}


size_t FtsParser::Fts_or_exprContext::getRuleIndex() const {
  return FtsParser::RuleFts_or_expr;
}

void FtsParser::Fts_or_exprContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterFts_or_expr(this);
}

void FtsParser::Fts_or_exprContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitFts_or_expr(this);
}

FtsParser::Fts_or_exprContext *FtsParser::fts_or_expr() {
  Fts_or_exprContext *_localctx =
      _tracker.createInstance<Fts_or_exprContext>(_ctx, getState());
  enterRule(_localctx, 2, FtsParser::RuleFts_or_expr);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(27);
    fts_and_expr();
    setState(32);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == FtsParser::OR) {
      setState(28);
      match(FtsParser::OR);
      setState(29);
      fts_and_expr();
      setState(34);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fts_and_exprContext
//------------------------------------------------------------------

FtsParser::Fts_and_exprContext::Fts_and_exprContext(
    ParserRuleContext *parent_ctx, size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

std::vector<FtsParser::Fts_seq_exprContext *>
FtsParser::Fts_and_exprContext::fts_seq_expr() {
  return getRuleContexts<FtsParser::Fts_seq_exprContext>();
}

FtsParser::Fts_seq_exprContext *FtsParser::Fts_and_exprContext::fts_seq_expr(
    size_t i) {
  return getRuleContext<FtsParser::Fts_seq_exprContext>(i);
}

std::vector<tree::TerminalNode *> FtsParser::Fts_and_exprContext::AND() {
  return getTokens(FtsParser::AND);
}

tree::TerminalNode *FtsParser::Fts_and_exprContext::AND(size_t i) {
  return getToken(FtsParser::AND, i);
}

std::vector<tree::TerminalNode *> FtsParser::Fts_and_exprContext::NOT() {
  return getTokens(FtsParser::NOT);
}

tree::TerminalNode *FtsParser::Fts_and_exprContext::NOT(size_t i) {
  return getToken(FtsParser::NOT, i);
}


size_t FtsParser::Fts_and_exprContext::getRuleIndex() const {
  return FtsParser::RuleFts_and_expr;
}

void FtsParser::Fts_and_exprContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterFts_and_expr(this);
}

void FtsParser::Fts_and_exprContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitFts_and_expr(this);
}

FtsParser::Fts_and_exprContext *FtsParser::fts_and_expr() {
  Fts_and_exprContext *_localctx =
      _tracker.createInstance<Fts_and_exprContext>(_ctx, getState());
  enterRule(_localctx, 4, FtsParser::RuleFts_and_expr);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    fts_seq_expr();
    setState(46);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == FtsParser::AND

           || _la == FtsParser::NOT) {
      setState(41);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case FtsParser::AND: {
          setState(36);
          match(FtsParser::AND);
          setState(38);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == FtsParser::NOT) {
            setState(37);
            match(FtsParser::NOT);
          }
          break;
        }

        case FtsParser::NOT: {
          setState(40);
          match(FtsParser::NOT);
          break;
        }

        default:
          throw NoViableAltException(this);
      }
      setState(43);
      fts_seq_expr();
      setState(48);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fts_seq_exprContext
//------------------------------------------------------------------

FtsParser::Fts_seq_exprContext::Fts_seq_exprContext(
    ParserRuleContext *parent_ctx, size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

std::vector<FtsParser::Fts_unaryContext *>
FtsParser::Fts_seq_exprContext::fts_unary() {
  return getRuleContexts<FtsParser::Fts_unaryContext>();
}

FtsParser::Fts_unaryContext *FtsParser::Fts_seq_exprContext::fts_unary(
    size_t i) {
  return getRuleContext<FtsParser::Fts_unaryContext>(i);
}


size_t FtsParser::Fts_seq_exprContext::getRuleIndex() const {
  return FtsParser::RuleFts_seq_expr;
}

void FtsParser::Fts_seq_exprContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterFts_seq_expr(this);
}

void FtsParser::Fts_seq_exprContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitFts_seq_expr(this);
}

FtsParser::Fts_seq_exprContext *FtsParser::fts_seq_expr() {
  Fts_seq_exprContext *_localctx =
      _tracker.createInstance<Fts_seq_exprContext>(_ctx, getState());
  enterRule(_localctx, 6, FtsParser::RuleFts_seq_expr);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(49);
      fts_unary();
      setState(52);
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (
        (((_la & ~0x3fULL) == 0) &&
         ((1ULL << _la) &
          ((1ULL << FtsParser::PLUS_SIGN) | (1ULL << FtsParser::MINUS_SIGN) |
           (1ULL << FtsParser::LP) | (1ULL << FtsParser::DQUOTA_STRING) |
           (1ULL << FtsParser::REGULAR_ID) | (1ULL << FtsParser::NUMBER) |
           (1ULL << FtsParser::TERM) | (1ULL << FtsParser::DEFAULT))) != 0));

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fts_unaryContext
//------------------------------------------------------------------

FtsParser::Fts_unaryContext::Fts_unaryContext(ParserRuleContext *parent_ctx,
                                              size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}


size_t FtsParser::Fts_unaryContext::getRuleIndex() const {
  return FtsParser::RuleFts_unary;
}

void FtsParser::Fts_unaryContext::copyFrom(Fts_unaryContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Must_not_atomContext
//------------------------------------------------------------------

tree::TerminalNode *FtsParser::Must_not_atomContext::MINUS_SIGN() {
  return getToken(FtsParser::MINUS_SIGN, 0);
}

FtsParser::Fts_atomContext *FtsParser::Must_not_atomContext::fts_atom() {
  return getRuleContext<FtsParser::Fts_atomContext>(0);
}

FtsParser::Must_not_atomContext::Must_not_atomContext(Fts_unaryContext *ctx) {
  copyFrom(ctx);
}

void FtsParser::Must_not_atomContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterMust_not_atom(this);
}
void FtsParser::Must_not_atomContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitMust_not_atom(this);
}
//----------------- Must_atomContext
//------------------------------------------------------------------

tree::TerminalNode *FtsParser::Must_atomContext::PLUS_SIGN() {
  return getToken(FtsParser::PLUS_SIGN, 0);
}

FtsParser::Fts_atomContext *FtsParser::Must_atomContext::fts_atom() {
  return getRuleContext<FtsParser::Fts_atomContext>(0);
}

FtsParser::Must_atomContext::Must_atomContext(Fts_unaryContext *ctx) {
  copyFrom(ctx);
}

void FtsParser::Must_atomContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterMust_atom(this);
}
void FtsParser::Must_atomContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitMust_atom(this);
}
//----------------- Plain_atomContext
//------------------------------------------------------------------

FtsParser::Fts_atomContext *FtsParser::Plain_atomContext::fts_atom() {
  return getRuleContext<FtsParser::Fts_atomContext>(0);
}

FtsParser::Plain_atomContext::Plain_atomContext(Fts_unaryContext *ctx) {
  copyFrom(ctx);
}

void FtsParser::Plain_atomContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterPlain_atom(this);
}
void FtsParser::Plain_atomContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitPlain_atom(this);
}
FtsParser::Fts_unaryContext *FtsParser::fts_unary() {
  Fts_unaryContext *_localctx =
      _tracker.createInstance<Fts_unaryContext>(_ctx, getState());
  enterRule(_localctx, 8, FtsParser::RuleFts_unary);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(59);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FtsParser::PLUS_SIGN: {
        _localctx = dynamic_cast<Fts_unaryContext *>(
            _tracker.createInstance<FtsParser::Must_atomContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(54);
        match(FtsParser::PLUS_SIGN);
        setState(55);
        fts_atom();
        break;
      }

      case FtsParser::MINUS_SIGN: {
        _localctx = dynamic_cast<Fts_unaryContext *>(
            _tracker.createInstance<FtsParser::Must_not_atomContext>(
                _localctx));
        enterOuterAlt(_localctx, 2);
        setState(56);
        match(FtsParser::MINUS_SIGN);
        setState(57);
        fts_atom();
        break;
      }

      case FtsParser::LP:
      case FtsParser::DQUOTA_STRING:
      case FtsParser::REGULAR_ID:
      case FtsParser::NUMBER:
      case FtsParser::TERM:
      case FtsParser::DEFAULT: {
        _localctx = dynamic_cast<Fts_unaryContext *>(
            _tracker.createInstance<FtsParser::Plain_atomContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(58);
        fts_atom();
        break;
      }

      default:
        throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fts_atomContext
//------------------------------------------------------------------

FtsParser::Fts_atomContext::Fts_atomContext(ParserRuleContext *parent_ctx,
                                            size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

FtsParser::Fts_primaryContext *FtsParser::Fts_atomContext::fts_primary() {
  return getRuleContext<FtsParser::Fts_primaryContext>(0);
}

FtsParser::Fts_field_prefixContext *
FtsParser::Fts_atomContext::fts_field_prefix() {
  return getRuleContext<FtsParser::Fts_field_prefixContext>(0);
}

FtsParser::Fts_boostContext *FtsParser::Fts_atomContext::fts_boost() {
  return getRuleContext<FtsParser::Fts_boostContext>(0);
}


size_t FtsParser::Fts_atomContext::getRuleIndex() const {
  return FtsParser::RuleFts_atom;
}

void FtsParser::Fts_atomContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterFts_atom(this);
}

void FtsParser::Fts_atomContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitFts_atom(this);
}

FtsParser::Fts_atomContext *FtsParser::fts_atom() {
  Fts_atomContext *_localctx =
      _tracker.createInstance<Fts_atomContext>(_ctx, getState());
  enterRule(_localctx, 10, FtsParser::RuleFts_atom);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 6, _ctx)) {
      case 1: {
        setState(61);
        fts_field_prefix();
        break;
      }
    }
    setState(64);
    fts_primary();
    setState(66);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FtsParser::CARET) {
      setState(65);
      fts_boost();
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fts_field_prefixContext
//------------------------------------------------------------------

FtsParser::Fts_field_prefixContext::Fts_field_prefixContext(
    ParserRuleContext *parent_ctx, size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

tree::TerminalNode *FtsParser::Fts_field_prefixContext::REGULAR_ID() {
  return getToken(FtsParser::REGULAR_ID, 0);
}

tree::TerminalNode *FtsParser::Fts_field_prefixContext::COLON() {
  return getToken(FtsParser::COLON, 0);
}


size_t FtsParser::Fts_field_prefixContext::getRuleIndex() const {
  return FtsParser::RuleFts_field_prefix;
}

void FtsParser::Fts_field_prefixContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterFts_field_prefix(this);
}

void FtsParser::Fts_field_prefixContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitFts_field_prefix(this);
}

FtsParser::Fts_field_prefixContext *FtsParser::fts_field_prefix() {
  Fts_field_prefixContext *_localctx =
      _tracker.createInstance<Fts_field_prefixContext>(_ctx, getState());
  enterRule(_localctx, 12, FtsParser::RuleFts_field_prefix);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(FtsParser::REGULAR_ID);
    setState(69);
    match(FtsParser::COLON);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fts_primaryContext
//------------------------------------------------------------------

FtsParser::Fts_primaryContext::Fts_primaryContext(ParserRuleContext *parent_ctx,
                                                  size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

FtsParser::Fts_termContext *FtsParser::Fts_primaryContext::fts_term() {
  return getRuleContext<FtsParser::Fts_termContext>(0);
}

FtsParser::Fts_phraseContext *FtsParser::Fts_primaryContext::fts_phrase() {
  return getRuleContext<FtsParser::Fts_phraseContext>(0);
}

tree::TerminalNode *FtsParser::Fts_primaryContext::LP() {
  return getToken(FtsParser::LP, 0);
}

FtsParser::Fts_or_exprContext *FtsParser::Fts_primaryContext::fts_or_expr() {
  return getRuleContext<FtsParser::Fts_or_exprContext>(0);
}

tree::TerminalNode *FtsParser::Fts_primaryContext::RP() {
  return getToken(FtsParser::RP, 0);
}


size_t FtsParser::Fts_primaryContext::getRuleIndex() const {
  return FtsParser::RuleFts_primary;
}

void FtsParser::Fts_primaryContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterFts_primary(this);
}

void FtsParser::Fts_primaryContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitFts_primary(this);
}

FtsParser::Fts_primaryContext *FtsParser::fts_primary() {
  Fts_primaryContext *_localctx =
      _tracker.createInstance<Fts_primaryContext>(_ctx, getState());
  enterRule(_localctx, 14, FtsParser::RuleFts_primary);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(77);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FtsParser::REGULAR_ID:
      case FtsParser::NUMBER:
      case FtsParser::TERM:
      case FtsParser::DEFAULT: {
        enterOuterAlt(_localctx, 1);
        setState(71);
        fts_term();
        break;
      }

      case FtsParser::DQUOTA_STRING: {
        enterOuterAlt(_localctx, 2);
        setState(72);
        fts_phrase();
        break;
      }

      case FtsParser::LP: {
        enterOuterAlt(_localctx, 3);
        setState(73);
        match(FtsParser::LP);
        setState(74);
        fts_or_expr();
        setState(75);
        match(FtsParser::RP);
        break;
      }

      default:
        throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fts_boostContext
//------------------------------------------------------------------

FtsParser::Fts_boostContext::Fts_boostContext(ParserRuleContext *parent_ctx,
                                              size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

tree::TerminalNode *FtsParser::Fts_boostContext::CARET() {
  return getToken(FtsParser::CARET, 0);
}

tree::TerminalNode *FtsParser::Fts_boostContext::NUMBER() {
  return getToken(FtsParser::NUMBER, 0);
}


size_t FtsParser::Fts_boostContext::getRuleIndex() const {
  return FtsParser::RuleFts_boost;
}

void FtsParser::Fts_boostContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterFts_boost(this);
}

void FtsParser::Fts_boostContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitFts_boost(this);
}

FtsParser::Fts_boostContext *FtsParser::fts_boost() {
  Fts_boostContext *_localctx =
      _tracker.createInstance<Fts_boostContext>(_ctx, getState());
  enterRule(_localctx, 16, FtsParser::RuleFts_boost);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(FtsParser::CARET);
    setState(80);
    match(FtsParser::NUMBER);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fts_natural_termContext
//------------------------------------------------------------------

FtsParser::Fts_natural_termContext::Fts_natural_termContext(
    ParserRuleContext *parent_ctx, size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

std::vector<tree::TerminalNode *>
FtsParser::Fts_natural_termContext::DEFAULT() {
  return getTokens(FtsParser::DEFAULT);
}

tree::TerminalNode *FtsParser::Fts_natural_termContext::DEFAULT(size_t i) {
  return getToken(FtsParser::DEFAULT, i);
}


size_t FtsParser::Fts_natural_termContext::getRuleIndex() const {
  return FtsParser::RuleFts_natural_term;
}

void FtsParser::Fts_natural_termContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterFts_natural_term(this);
}

void FtsParser::Fts_natural_termContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitFts_natural_term(this);
}

FtsParser::Fts_natural_termContext *FtsParser::fts_natural_term() {
  Fts_natural_termContext *_localctx =
      _tracker.createInstance<Fts_natural_termContext>(_ctx, getState());
  enterRule(_localctx, 18, FtsParser::RuleFts_natural_term);

  auto onExit = finally([=] { exitRule(); });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(83);
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
          setState(82);
          match(FtsParser::DEFAULT);
          break;
        }

        default:
          throw NoViableAltException(this);
      }
      setState(85);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input,
                                                                       9, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fts_termContext
//------------------------------------------------------------------

FtsParser::Fts_termContext::Fts_termContext(ParserRuleContext *parent_ctx,
                                            size_t invoking_state)
    : ParserRuleContext(parent_ctx, invoking_state) {}

tree::TerminalNode *FtsParser::Fts_termContext::TERM() {
  return getToken(FtsParser::TERM, 0);
}

tree::TerminalNode *FtsParser::Fts_termContext::REGULAR_ID() {
  return getToken(FtsParser::REGULAR_ID, 0);
}

tree::TerminalNode *FtsParser::Fts_termContext::NUMBER() {
  return getToken(FtsParser::NUMBER, 0);
}

FtsParser::Fts_natural_termContext *
FtsParser::Fts_termContext::fts_natural_term() {
  return getRuleContext<FtsParser::Fts_natural_termContext>(0);
}


size_t FtsParser::Fts_termContext::getRuleIndex() const {
  return FtsParser::RuleFts_term;
}

void FtsParser::Fts_termContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->enterFts_term(this);
}

void FtsParser::Fts_termContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FtsParserListener *>(listener);
  if (parserListener != nullptr) parserListener->exitFts_term(this);
}

FtsParser::Fts_termContext *FtsParser::fts_term() {
  Fts_termContext *_localctx =
      _tracker.createInstance<Fts_termContext>(_ctx, getState());
  enterRule(_localctx, 20, FtsParser::RuleFts_term);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(91);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FtsParser::TERM: {
        enterOuterAlt(_localctx, 1);
        setState(87);
        match(FtsParser::TERM);
        break;
      }

      case FtsParser::REGULAR_ID: {
        enterOuterAlt(_localctx, 2);
        setState(88);
        match(FtsParser::REGULAR_ID);
        break;
      }

      case FtsParser::NUMBER: {
        enterOuterAlt(_localctx, 3);
        setState(89);
        match(FtsParser::NUMBER);
        break;
      }
